--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -82,9 +82,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn {
-  border-radius: 4px;
+  border-radius: 6px;
   padding: .5rem 1rem;
-  border-radius: .2rem;
   line-height: 1.9;
 }
 .btn-sm {
@@ -322,13 +321,14 @@ table.table {
   }
 
   .form-control {
-    padding: 2.5rem 1.25rem;
-    border-radius: 7px;
+    padding: 2rem 1.25rem;
+    border-radius: 6px;
   }
 
   .btn {
-    padding: 1rem 1.5rem;
+    padding: 1rem 1.25rem;
     width: 100%;
+    border-radius: 6px;
   }
 }
 
@@ -337,4 +337,8 @@ button, a {
     outline: none !important;
     box-shadow: none !important;
   }
+}
+
+.form-control {
+  border-radius: 6px;
 }
