--- a/web/app/views/shared/_site_connect_modal.html.erb
+++ b/web/app/views/shared/_site_connect_modal.html.erb
@@ -1,3 +1,4 @@
+<% site_credential = site_credential_for(site) %>
 <div class="modal fade site-connect-modal" id="<%= modal_id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -11,33 +12,22 @@
           <p class="text-muted">Enter your credentials to let us post listings on your behalf</p>
         </div>
         <br><br>
-        <form>
+        <%= form_for [:api, site_credential], remote: true do |f| %>
+          <%= f.hidden_field :site_id, value: site.id %>
           <div class="form-group">
-            <input type="email" placeholder="<%= site.name %> email/username" class='form-control' autocomplete='off'>
+            <%= f.email_field :uid, autofocus: true, autocomplete: 'off', placeholder: "#{site.name} email/username", class: 'form-control', required: true%>
           </div>
           <div class="form-group">
-            <input type="password" placeholder="<%= site.name %> password" class='form-control' autocomplete='off'>
+            <%= f.password_field :password, autocomplete: 'off', placeholder: "#{site.name} password", class: 'form-control', required: true%>
           </div>
           <br>
           <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-lg">Connect</button>
+            <%= f.submit "Connect", class: 'btn btn-primary btn-lg' %>
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
 </div>
 
-<script type="text/javascript">
-  (function () {
-    function loadRoute () {
-      var loc = window.location.href,
-        modalId = loc.split("#").pop();
-      if (modalId != loc) {
-        $("#"+modalId).modal();
-      };
-    };
-    $(loadRoute);
-    $(window).on('hashchange', loadRoute);
-  }());
-</script>
+
