--- a/web/app/views/sites/index.html.erb
+++ b/web/app/views/sites/index.html.erb
@@ -2,7 +2,7 @@
   <% @sites.each_slice(3) do |sites| %>
     <div class="row">
       <% sites.each do |site| %>
-        <% modal_id = "connect-#{site.code}" %>
+        <% modal_id = "connect-#{site.code}-modal" %>
         <div class="col-sm-4">
           <div class="card raised">
             <div class="card-body">
