--- a/web/app/views/shared/_site_connect_modal.html.erb
+++ b/web/app/views/shared/_site_connect_modal.html.erb
@@ -18,7 +18,7 @@
             <i class="far fa-check-circle text-success" style="font-size: 150px;"></i>
             <br>
             <p>Connection successful</p>
-            <button class="btn btn-primary btn-lg" data-dismiss="modal" aria-label="Close">Close</button>
+            <button class="btn btn-info btn-lg" data-dismiss="modal" aria-label="Close">Close</button>
           </div>
           <div class="form-box">
             <%= f.hidden_field :site_id, value: site.id %>
