--- a/web/app/views/sites/index.html.erb
+++ b/web/app/views/sites/index.html.erb
@@ -2,6 +2,7 @@
   <% @sites.each_slice(3) do |sites| %>
     <div class="row">
       <% sites.each do |site| %>
+        <% site_credential = site_credential_for(site) %>
         <% modal_id = "connect-#{site.code}-modal" %>
         <div class="col-sm-4">
           <div class="card raised">
@@ -11,12 +12,19 @@
               </h3>
               <small class="card-subtitle">
                 <a href="//<%= site.domain %>" target="_blank" class="text-info"><%= site.domain.gsub('www.', '') %></a>
+                <br>
+                <span class="text-muted" title="<%= site_credential.connected_at %>">Last connected: <%= time_ago_in_words(site_credential.connected_at) rescue 'Never' %></span>
               </small>
               <p class="card-text">
               </p>
-              <a class="btn btn-outline-warning btn-sm btn-round" data-toggle="modal" href="#<%= modal_id %>">
-                connect
+              <a class="btn <%= site_credential.connected? ? 'btn-outline-primary' : 'btn-outline-secondary' %> btn-sm btn-round" data-toggle="modal" href="#<%= modal_id %>">
+                <% if site_credential.connected? %> 
+                  <i class="fas fa-check-circle"></i> Reconnect
+                <% else %>
+                  <i class="fas fa-times-circle"></i> Connect
+                <% end %>
               </a>
+              <br>
               <%= render partial: 'shared/site_connect_modal', locals: { site: site, modal_id: modal_id } %>
             </div>
           </div>
